[gd_scene load_steps=15 format=2]

[ext_resource path="res://Objects/Game.gd" type="Script" id=1]
[ext_resource path="res://Objects/ScrollingBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Sounds/sfx_neutralized.wav" type="AudioStream" id=3]
[ext_resource path="res://Objects/Camera.gd" type="Script" id=4]
[ext_resource path="res://Objects/actors/obj_Wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/actors/obj_TubeSegment.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/actors/obj_Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/actors/obj_Blackhole.tscn" type="PackedScene" id=8]
[ext_resource path="res://Resources/ProggyClean.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Objects/FadeEffect.tscn" type="PackedScene" id=10]
[ext_resource path="res://Objects/Shaders.tscn" type="PackedScene" id=11]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -140, -150, 0, 0, 0, 0, 140, -150 )
}

[sub_resource type="DynamicFont" id=2]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

modulate = Color( 0.554688, 0.554688, 0.554688, 1 )
position = Vector2( -160, -140 )
z_index = -100
speed_y = 0.5

[node name="Timers" type="Node" parent="." index="1"]

editor/display_folded = true

[node name="DifficultyTimer" type="Timer" parent="Timers" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="MobTimer" type="Timer" parent="Timers" index="1"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="Timers" index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="Timers" index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Sounds" type="Node" parent="." index="2"]

editor/display_folded = true

[node name="sfxGameOver" type="AudioStreamPlayer" parent="Sounds" index="0"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Camera2D" type="Camera2D" parent="." index="3"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 4 )

[node name="Pipe" type="Node2D" parent="." index="4"]

editor/display_folded = true
visible = false
z_index = -1
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="RWall" parent="Pipe" index="0" instance=ExtResource( 5 )]

modulate = Color( 0.480469, 0.480469, 0.480469, 1 )
position = Vector2( 156, -72 )
scale = Vector2( 0.5, 0.5 )
z_index = 50
_sections_unfolded = [ "Transform" ]
facing = Vector2( -1, 0 )

[node name="RWall2" parent="Pipe" index="1" instance=ExtResource( 5 )]

modulate = Color( 0.480469, 0.480469, 0.480469, 1 )
position = Vector2( 157, 72 )
scale = Vector2( 0.5, 0.5 )
z_index = 50
_sections_unfolded = [ "Transform" ]
facing = Vector2( -1, 0 )

[node name="R3" parent="Pipe" index="2" instance=ExtResource( 6 )]

position = Vector2( 128, 0 )
normal = Vector2( -0.25, 0 )

[node name="R2" parent="Pipe" index="3" instance=ExtResource( 6 )]

position = Vector2( 80, 0 )
scale = Vector2( 0.5, 1 )
normal = Vector2( -0.25, 0 )

[node name="R1" parent="Pipe" index="4" instance=ExtResource( 6 )]

position = Vector2( 48, 0 )
scale = Vector2( 0.5, 1 )
normal = Vector2( -0.1, 0 )

[node name="Base" parent="Pipe" index="5" instance=ExtResource( 6 )]

[node name="L1" parent="Pipe" index="6" instance=ExtResource( 6 )]

position = Vector2( -48, 0.487686 )
scale = Vector2( 0.5, 1 )
_sections_unfolded = [ "Transform", "Visibility" ]
normal = Vector2( 0.1, 0 )

[node name="L2" parent="Pipe" index="7" instance=ExtResource( 6 )]

position = Vector2( -80, 0 )
scale = Vector2( 0.5, 1 )
normal = Vector2( 0.25, 0 )

[node name="L3" parent="Pipe" index="8" instance=ExtResource( 6 )]

position = Vector2( -128, 0 )
normal = Vector2( 0.25, 0 )

[node name="LWall" parent="Pipe" index="9" instance=ExtResource( 5 )]

modulate = Color( 0.480469, 0.480469, 0.480469, 1 )
position = Vector2( -156, 74 )
scale = Vector2( 0.5, 0.5 )
z_index = 50
_sections_unfolded = [ "Transform" ]
facing = Vector2( 1, 0 )

[node name="LWall2" parent="Pipe" index="10" instance=ExtResource( 5 )]

modulate = Color( 0.480469, 0.480469, 0.480469, 1 )
position = Vector2( -156, -70 )
scale = Vector2( 0.5, 0.5 )
z_index = 50
_sections_unfolded = [ "Transform" ]
facing = Vector2( 1, 0 )

[node name="MobPath" type="Path2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 0, -151 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( -140, -150 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Player" parent="." index="6" groups=[
"destructable",
] instance=ExtResource( 7 )]

position = Vector2( 0, 80 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="Blackhole" parent="." index="7" instance=ExtResource( 8 )]

position = Vector2( 0, 109 )
z_index = 1

[node name="UI" type="Control" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="LevelLabel" type="Label" parent="UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -160.0
margin_top = -140.0
margin_bottom = -126.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "LEVEL 1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ScoreLabel" type="Label" parent="UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -139.0
margin_right = 160.0
margin_bottom = -125.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "0000"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Fade" parent="UI" index="2" instance=ExtResource( 10 )]

margin_left = -320.0
margin_top = -280.0
margin_right = 320.0
margin_bottom = 280.0
autoplay = true

[node name="Shaders" parent="." index="9" instance=ExtResource( 11 )]

[connection signal="timeout" from="Timers/DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]

[connection signal="timeout" from="Timers/MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="timeout" from="Timers/ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="Timers/StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="finished" from="Sounds/sfxGameOver" to="." method="return_to_mainmenu"]

[connection signal="dead" from="Player" to="." method="_on_Player_dead"]

[connection signal="did_trick" from="Player" to="." method="_on_Player_trick"]

[connection signal="hit" from="Player" to="Camera2D" method="shake"]

[connection signal="area_entered" from="Blackhole" to="." method="_on_Blackhole_area_entered"]


